overflow issues? change heigh vh -> %

--- a/app.css
+++ b/app.css
@@ -110,9 +110,9 @@ html.is-animating .transition-fadeAbout{
 }*/
 
 .preload {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #000;
     z-index: 4;
     overflow: hidden;
